--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -4,7 +4,7 @@
       -if current_user
         New Family Member
       -else
-        New User
+        Create Account
     =render 'form'
   %p
     = link_to 'Back', :back, class: "btn btn-small"
