--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
                     %a{href: "#{user_path(current_user)}"}
                       %i.icon-user
                       Profile
-                  -if current_user.parent
+                  -if current_user.user_type >= 20
                     %li
                       %a{href: "#{edit_user_path(current_user)}"}
                         %i.icon-edit
@@ -45,7 +45,7 @@
                 %a{href: "#{user_path(current_user)}"}
                   %i.icon-user
                   Profile
-              -if current_user.parent
+              -if current_user.user_type >= 20
                 %li
                   %a{href: "#{edit_user_path(current_user)}"}
                     %i.icon-edit
@@ -54,11 +54,26 @@
                 %a{href: "#{signout_path}"}
                   %i.icon-road
                   Sign Out
-    .container{style: "position:fixed; top:55px; right:100px; width:300px;"}
-      -if flash.count > 0
-        .alert.fade.in.alert-danger{align: "center"}
+    %div.hidden-phone
+      .container{style: "position:fixed; top:55px; right:55px; width:auto;"}
+        -if flash.count > 0
           -flash.each do |name, msg|
-            =content_tag :div, msg, :id => "flash_#{name}"
+            -if flash[:notice]
+              .alert.fade.in.alert-success{align: "center"}
+                =content_tag :div, msg, :id => "flash_#{name}"
+            -else
+              .alert.fade.in.alert-danger{align: "center"}
+                =content_tag :div, msg, :id => "flash_#{name}"
+    %div.visible-phone
+      .container{style: "position:fixed; top:55px; width:auto;"}
+        -if flash.count > 0
+          -flash.each do |name, msg|
+            -if flash[:notice]
+              .alert.fade.in.alert-success{align: "center"}
+                =content_tag :div, msg, :id => "flash_#{name}"
+            -else
+              .alert.fade.in.alert-danger{align: "center"}
+                =content_tag :div, msg, :id => "flash_#{name}"
 .container-fluid
   .row-fluid
     .span2
