user accounts corrected

--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -12,6 +12,7 @@
     %h3.lead
       %span.title.active-content
         =@family.name
+        Family
       %span.title.hidden-content
         =f.text_field :name
       -if current_user.user_type >= 20
