--- a/app/views/families/_card.html.haml
+++ b/app/views/families/_card.html.haml
@@ -1,5 +1,28 @@
 .family-card{align: "center"}
-  %div.well.well-small
+  %div.well.well-small.hidden-phone
+    %table{align: "center", width: "100%"}
+      %tr
+        %td{rowspan: "2"}
+          =link_to (image_tag(gravatar_for(user.email == nil || user.email == "" ? user.name : user.email))), user_path(user)
+        %td{align: "center"}
+          .lead= link_to user.name, user_path(user)
+        %td{align: "right"}
+          .lead
+            = user.credits
+            credits
+      %tr
+        %td{align: "center"}
+          -if user.user_type >= 10
+            .muted (Parent)
+          -else
+            .muted (Child)
+        %td{align: "right"}
+          .span.edit-content
+            =link_to ' Chore', new_user_task_path(user), class: "i icon-plus btn"
+            -if current_user.user_type >= 20  
+              =link_to ' Edit', edit_user_path(user), class: "i icon-edit btn"
+              =link_to ' Delete', user, confirm: 'Are you sure?', class: "i icon-trash btn", id: 'delete-user'
+  %div.well.well-small.visible-phone
     %table{align: "center", width: "100%"}
       %tr
         %td{rowspan: "2"}
@@ -16,7 +39,8 @@
             .muted (Parent)
           -else
             .muted (Child)
-        %td{align: "right"}
+      %tr
+        %td{colspan: "3", align: "right"}
           .span.edit-content
             =link_to ' Chore', new_user_task_path(user), class: "i icon-plus btn"
             -if current_user.user_type >= 20  
