--- a/app/views/families/_card.html.haml
+++ b/app/views/families/_card.html.haml
@@ -1,5 +1,5 @@
 .family-card{align: "center"}
-  %div.well.well-small.hidden-phone
+  %div.well.well-small.visible-desktop
     %table{align: "center", width: "100%"}
       %tr
         %td{rowspan: "2"}
@@ -22,7 +22,7 @@
             -if current_user.user_type >= 20  
               =link_to ' Edit', edit_user_path(user), class: "i icon-edit btn"
               =link_to ' Delete', user, confirm: 'Are you sure?', class: "i icon-trash btn", id: 'delete-user'
-  %div.well.well-small.visible-phone
+  %div.well.well-small.visible-phone.visible-tablet
     %table{align: "center", width: "100%"}
       %tr
         %td{rowspan: "2"}
@@ -42,7 +42,7 @@
       %tr
         %td{colspan: "3", align: "right"}
           .span.edit-content
-            =link_to ' Chore', new_user_task_path(user), class: "i icon-plus btn"
+            =link_to ' Chore', new_user_task_path(user), class: "i icon-plus btn btn-small"
             -if current_user.user_type >= 20  
-              =link_to ' Edit', edit_user_path(user), class: "i icon-edit btn"
-              =link_to ' Delete', user, confirm: 'Are you sure?', class: "i icon-trash btn", id: 'delete-user'
+              =link_to ' Edit', edit_user_path(user), class: "i icon-edit btn btn-small"
+              =link_to ' Delete', user, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", id: 'delete-user'
