--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -13,7 +13,10 @@
           %td{align: "center"}
             .lead= item.price.to_s + ' credits'
           %td{align: "center"}
-            = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+            -if current_user.credits < item.price
+              = link_to 'Buy', '#', class: "btn", disabled: true
+            -else
+              = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
             %div{id: "itemCount-#{item.id}"}
               .badge.badge-inverse= Purchase.where(item_id: item.id).count
         %tr
@@ -36,7 +39,10 @@
               .lead= item.name
           %tr
             %td
-              = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+              -if current_user.credits < item.price
+                = link_to 'Buy', '#', class: "btn", disabled: true
+              -else
+                = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn btn-small", remote: true
               %div{id: "itemCount-#{item.id}"}
                 .badge.badge-inverse= Purchase.where(item_id: item.id).count
             %td
