--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -5,8 +5,8 @@
   }
 
 .span8
-  = calendar @events, {prev_text: "< ", next_text: " >"} do |event|
-    %div{name: "#{event.user_id}", onclick: "location.href='#{event_path(event)}'", class: "label label-#{(if event.user_id == family[0].id then "success" elsif event.user_id == family[1].id then "warning" elsif event.user_id == family[2].id then "important" elsif event.user_id == family[3].id then "info" elsif event.user_id == family[4].id then "inverse" else "" end)}"}
+  = calendar @events.sort_by{ |t| t.start_time }, {prev_text: "< ", next_text: " >"} do |event|
+    %div{name: "#{event.user_id}", onclick: "location.href='#{event_path(event)}'", class: "label label-#{(if event.user_id == family[0].id then "success" elsif event.user_id == family[1].id then "warning" elsif event.user_id == family[2].id then "important" elsif event.user_id == family[3].id then "info" elsif event.user_id == family[4].id then "inverse" else "" end)}", style: "cursor: pointer"}
       = event.start_time.strftime("%l:%M %p")
       %br
       = event.name
