getting started on the menu

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -13,6 +13,7 @@
     %p
 .span2
   = link_to ' Event', new_event_path, class: "i icon-plus btn"
+  = link_to ' Meal', meals_path, class: "i icon-plus btn"
   %p
   %div.well.well-small
     - family.each do |member|
