--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -44,7 +44,7 @@
             %a{href: "#{new_family_path}"}
               %i.icon-home
               Create Family
-      -if params[:controller] == 'events'
+      -if params[:controller] == 'events' || params[:controller] == 'meals' || params[:controller] == 'ingredients'
         %li.active
           %a{href: "#{events_path}"}
             %i.icon-calendar
@@ -91,7 +91,7 @@
           %li
             %a{href: "#{new_family_path}"}
               %i.icon-home
-      -if params[:controller] == 'events'
+      -if params[:controller] == 'events' || params[:controller] == 'meals' || params[:controller] == 'ingredients'
         %li.active
           %a{href: "#{events_path}"}
             %i.icon-calendar
